<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ModernShowcase</groupId>
  <artifactId>ModernShowcase</artifactId>
  <version>1.4</version>
  	<properties>
   	 <maven.compiler.source>1.8</maven.compiler.source>
   	 <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
	<repositories>
		<!-- This adds the Spigot Maven repository to the build -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
		    <id>papermc</id>
		    <url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
			<repository>
	    <id>rDruTNT-DruRespositories</id>
	    <url>https://packagecloud.io/rDruTNT/DruRespositories/maven2</url>
	    <releases>
	      <enabled>true</enabled>
	    </releases>
	    <snapshots>
	      <enabled>true</enabled>
	    </snapshots>
  </repository>
  <repository>
    <id>playpro-repo</id>
    <url>https://maven.playpro.com</url>
</repository>
	</repositories>

	<dependencies>
		<dependency>
		  	<groupId>org.bstats</groupId>
		  	<artifactId>bstats-bukkit</artifactId>
		  	<version>3.0.0</version>
		  	<scope>compile</scope>
		</dependency>
	
		<dependency>
		    <groupId>dev.folia</groupId>
		    <artifactId>folia-api</artifactId>
		    <version>1.20.1-R0.1-SNAPSHOT</version>
		    <scope>provided</scope>
		</dependency>	
		<dependency>
    <groupId>net.coreprotect</groupId>
    <artifactId>coreprotect</artifactId>
    <version>22.2</version>
    <scope>provided</scope>
</dependency>
		<dependency>
      	  <groupId>GUILibRD</groupId>
      	  <artifactId>guilibrd</artifactId>
    	    <version>2.3-SNAPSHOT</version>
    	</dependency>
	</dependencies>

	<build>
	<finalName>ModernShowcase</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
				      <configuration>
				        <relocations>
				          <relocation>
				            <pattern>org.bstats</pattern>
				            <!-- Replace this with your package! -->
				            <shadedPattern>me.dru.showcase</shadedPattern>
				          </relocation>
				        </relocations>
				      </configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
